# cargo-public-api-crates

./: Cargo.toml
src/: analyze.rs  build_docs.rs  check.rs  visit.rs
src/output/: mod.rs  writer.rs
