[package]
name = "cargo-public-api-crates"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "derive",
] }
glob = "0.3.1"
itertools = "0.14"
rustdoc-types = "0.55.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
toml = "0.9.2"
